arreglados algunos errores que daba el mapeo